--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:client:dev": "webpack --config=webpack.congig.js --env=dev",
-    "build:client:prod": "webpack --config=webpack.congig.js --env=prod",
+    "build:client:dev": "webpack --config=webpack/webpack.config.js --env=dev",
+    "build:client:prod": "webpack --config=webpack/webpack.config.js --env=prod",
+    "build:client:devserver": "webpack-dev-server --config=webpack/webpack.config.js --env=dev --open",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "start": "webpack-dev-server --hot"
@@ -26,10 +27,12 @@
     "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
+    "firebase-tools": "^7.12.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^4.2.2"
   },
   "husky": {
